--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,15 +73,8 @@ jobs:
             - maven-repo-v3-
       - run:
           command: |
-              #RUN wget https://downloads.bouncycastle.org/fips-java/bc-fips-1.0.1.jar -P /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/ext
-              #RUN cp -a /etc/java-8-openjdk/security/java.security /etc/java-8-openjdk/security/java.security.orig
-              #COPY java.security.fips /etc/java-8-openjdk/security/java.security
-
-              #RUN cp -a /etc/ssl/certs/java/cacerts /etc/ssl/certs/java/cacerts.orig
-              #RUN rm /etc/ssl/certs/java/cacerts
-              #RUN keytool -importkeystore -srckeystore /etc/ssl/certs/java/cacerts.orig -srcstoretype JKS -destkeystore /etc/ssl/certs/java/cacerts -deststoretype BCFKS -deststorepass changeit -srcstorepass changeit
-
               pwd
+              #
 
               wget http://us.mirrors.quenda.co/apache/maven/maven-3/3.6.1/binaries/apache-maven-3.6.1-bin.tar.gz -nv
               tar -xzf apache-maven-3.6.1-bin.tar.gz
@@ -98,6 +91,8 @@ jobs:
               ls -la /etc/ssl || true
               find / -iname java.security || true
               find / -iname cacerts || true
+              find / -iname ext || true
+              find / -iname '*jsse*' || true
               cp -a /usr/local/openjdk-8/jre/lib/security/java.security /usr/local/openjdk-8/jre/lib/security/java.security.orig
               cp java.security.fips /usr/local/openjdk-8/jre/lib/security/java.security
 
