--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ jobs:
               export MAVEN_HOME=~/circleci-sg/apache-maven-3.6.1
               export PATH=$M2:$PATH
               mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
+              mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve-plugins -DincludeParents=true -s settings.xml
       - run:
           command: |
               export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -yq rng-tools haveged && apt-get clean
@@ -91,9 +92,12 @@ jobs:
               cp -a /usr/local/openjdk-8/jre/lib/security/java.security /usr/local/openjdk-8/jre/lib/security/java.security.orig
               cp java.security.fips /usr/local/openjdk-8/jre/lib/security/java.security
 
-              cp -a /usr/local/openjdk-8/jre/lib/security/cacerts /usr/local/openjdk-8/jre/lib/security/cacerts.orig
               rm /usr/local/openjdk-8/jre/lib/security/cacerts
-              keytool -importkeystore -srckeystore /usr/local/openjdk-8/jre/lib/security/cacerts.orig -srcstoretype JKS -destkeystore /usr/local/openjdk-8/jre/lib/security/cacerts -deststoretype BCFKS -deststorepass changeit -srcstorepass changeit
+              cp src/test/resources/fips/cacerts.BCFKS /usr/local/openjdk-8/jre/lib/security/cacerts
+
+              #cp -a /usr/local/openjdk-8/jre/lib/security/cacerts /usr/local/openjdk-8/jre/lib/security/cacerts.orig
+              #rm /usr/local/openjdk-8/jre/lib/security/cacerts
+              #keytool -importkeystore -srckeystore /usr/local/openjdk-8/jre/lib/security/cacerts.orig -srcstoretype JKS -destkeystore /usr/local/openjdk-8/jre/lib/security/cacerts -deststoretype BCFKS -deststorepass changeit -srcstorepass changeit
 
               echo "done"
 
