--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ jobs:
               mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml || true
               mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve-plugins -DincludeParents=true -s settings.xml || true
               mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:go-offline -DincludeParents=true -s settings.xml || true
-              mvn -U verify -Dtest="unknwon" -s settings.xml -Pwith-static-openssl-linux-non-fedora,-with-dynamic-openssl || true
+              mvn -U install verify -DskipTests -s settings.xml -Pwith-static-openssl-linux-non-fedora,-with-dynamic-openssl,enterprise || true
               
       - run:
           command: |
