--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,13 +93,13 @@ jobs:
               
       - run:
           command: |
-              export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -yq rng-tools haveged && apt-get clean
+              #export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -yq rng-tools haveged && apt-get clean
               
               #wget https://downloads.bouncycastle.org/fips-java/bc-fips-1.0.1.jar -P /usr/local/openjdk-8/jre/lib/ext
-              find / -iname java.security
-              find / -iname cacerts
-              #cp -a /usr/local/openjdk-8/jre/lib/security/java.security /usr/local/openjdk-8/jre/lib/security/java.security.orig
-              #cp java.security.fips /usr/local/openjdk-8/jre/lib/security/java.security
+              find / -iname java.security || true
+              find / -iname cacerts || true
+              cp -a /usr/local/openjdk-11/conf/security/java.security /usr/local/openjdk-11/conf/security/java.security.orig
+              cp java.security.fips /usr/local/openjdk-11/conf/security/java.security
 
               #rm /usr/local/openjdk-8/jre/lib/security/cacerts
               #cp src/test/resources/fips/cacerts.BCFKS /usr/local/openjdk-8/jre/lib/security/cacerts
