--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,10 @@ jobs:
               rm /usr/local/openjdk-11/lib/security/cacerts
               cp src/test/resources/fips/cacerts.BCFKS /usr/local/openjdk-11/lib/security/cacerts
 
+              cp Test.java .
+              javac Test.java
+              java Test || true
+              java  -Djava.security.properties==/root/circleci-sg/java.security.fips Test || true
               #cp -a /usr/local/openjdk-8/jre/lib/security/cacerts /usr/local/openjdk-8/jre/lib/security/cacerts.orig
               #rm /usr/local/openjdk-8/jre/lib/security/cacerts
               #keytool -importkeystore -srckeystore /usr/local/openjdk-8/jre/lib/security/cacerts.orig -srcstoretype JKS -destkeystore /usr/local/openjdk-8/jre/lib/security/cacerts -deststoretype BCFKS -deststorepass changeit -srcstorepass changeit
@@ -131,7 +135,7 @@ jobs:
               mvn -U -Pcoverage,with-static-openssl-linux-non-fedora,-with-dynamic-openssl verify -Dtest="$TESTFILES" -s settings.xml
             else
               #no coverage for non-master branches
-              mvn -U verify -e -Dtest="$TESTFILES" -s settings.xml -Pwith-static-openssl-linux-non-fedora,-with-dynamic-openssl,-with-bc,with-bcfips
+              mvn -U verify -e  -Darguments="-Djava.security.properties==/root/circleci-sg/java.security.fips"   -Dtest="$TESTFILES" -s settings.xml -Pwith-static-openssl-linux-non-fedora,-with-dynamic-openssl,-with-bc,with-bcfips
             fi
       - store_test_results:
           path: target/surefire-reports
