--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,9 @@ jobs:
 
               javac Test.java
               java Test || true
+              java -cp bc-fips-1.0.1.jar Test || true
               java  -Djava.security.properties==/root/circleci-sg/java.security.fips Test || true
+              java  -cp bc-fips-1.0.1.jar -Djava.security.properties==/root/circleci-sg/java.security.fips Test || true
               #cp -a /usr/local/openjdk-8/jre/lib/security/cacerts /usr/local/openjdk-8/jre/lib/security/cacerts.orig
               #rm /usr/local/openjdk-8/jre/lib/security/cacerts
               #keytool -importkeystore -srckeystore /usr/local/openjdk-8/jre/lib/security/cacerts.orig -srcstoretype JKS -destkeystore /usr/local/openjdk-8/jre/lib/security/cacerts -deststoretype BCFKS -deststorepass changeit -srcstorepass changeit
