--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,7 +167,7 @@ jobs:
             - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
             - maven-repo-v3-{{ .Branch }}-
             - maven-repo-v3-
-      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml -e -X -Djavax.net.debug=ssl
+      - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
       - run: ./smoketest.sh
       - run:
           command: |
