--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,7 +168,7 @@ jobs:
             - maven-repo-v3-{{ .Branch }}-
             - maven-repo-v3-
       - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
-      - run: ./smoketest.sh
+      #- run: ./smoketest.sh
       - run:
           command: |
             set -x
