[CI] fix circleci build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,11 @@ jobs:
       - image: circleci/openjdk:${SG_JAVA_BUILD_VERSION:-11}-jdk-browsers
     steps:
       - run:
-          name: Install and Update
-          command: sudo apt-get update -yqq && sudo apt-get install -yqq libapr1 openssl libxml2-utils
+          name: apt update
+          command: sudo apt-get update -y || true
+      - run:
+          name: install deps
+          command: sudo apt-get install -y libapr1 openssl libxml2-utils || true
       - run:
           name: Versions
           command: 'uname -a;java -version;openssl version'
