--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <properties>
     <sgssl.version>6.8.1-25.6</sgssl.version>
-    <enterprise-modules.version>6.8.1-34.1</enterprise-modules.version>
+    <enterprise-modules.version>6.8.1-34.2-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>6.8.1</elasticsearch.version>
     
     <!-- deps -->
