--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-7</artifactId>
   <packaging>jar</packaging>
   <!-- 7.x.y-a.b.c-->
-  <version>7.1-HEAD-SNAPSHOT</version>
+  <version>7.2-HEAD-SNAPSHOT</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,11 +34,11 @@
   </licenses>
 
   <properties>
-    <enterprise-modules.version>7.1-enterprise-HEAD-SNAPSHOT</enterprise-modules.version>
-    <elasticsearch.version>7.1.0</elasticsearch.version>
+    <enterprise-modules.version>7.2-enterprise-HEAD-SNAPSHOT</enterprise-modules.version>
+    <elasticsearch.version>7.2.0</elasticsearch.version>
     
     <!-- deps -->
-    <netty-native.version>2.0.20.Final</netty-native.version>
+    <netty-native.version>2.0.25.Final</netty-native.version>
     <bc.version>1.61</bc.version>
     <log4j.version>2.11.1</log4j.version>
     <guava.version>25.1-jre</guava.version>
@@ -441,7 +441,7 @@
         <dependency>
           <groupId>com.floragunn</groupId>
           <artifactId>search-guard-static-tcnative-beta</artifactId>
-          <version>1.1.1a-${netty-native.version}-non-fedora-linux-x86_64</version>
+          <version>1.1.1c-${netty-native.version}-non-fedora-linux-x86_64</version>
           <scope>provided</scope>
         </dependency>
       </dependencies>
@@ -452,7 +452,7 @@
         <dependency>
           <groupId>com.floragunn</groupId>
           <artifactId>search-guard-static-tcnative-beta</artifactId>
-          <version>1.1.1a-${netty-native.version}-fedora-linux-x86_64</version>
+          <version>1.1.1c-${netty-native.version}-fedora-linux-x86_64</version>
           <scope>provided</scope>
         </dependency>
       </dependencies>
