--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
             - maven-repo-v3-{{ .Branch }}-
             - maven-repo-v3-
       - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:resolve -DincludeParents=true -s settings.xml
-      - run: ./smoketest.sh
+      - run: pwd
+      - run: mkdir $(pwd)/tmpes
+      - run: ES_TMPDIR=$(pwd)/tmpes ./smoketest.sh
       - run:
           command: |
             set -x
