--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ] && [ "${SG_JAVA_BUILD_VERSION}" == "8" ]; then
              mvn deploy -U -Penterprise -DskipTests -s settings.xml
               mvn -U -Pcoverage sonar:sonar -Dsonar.organization=floragunncom-github -Dsonar.login=$SONAR_LOGIN -Dsonar.host.url=https://sonarcloud.io || true
-              mvn clean verify com.srcclr:srcclr-maven-plugin:scan -Penterprise -DskipTests -U
+              mvn clean verify com.srcclr:srcclr-maven-plugin:3.1.0:scan -Penterprise -DskipTests -U
               ./dev/scan_veracode.sh
             fi
       - save_cache:
