Added cluster:admin/xpack/monitoring* permission to SGS_LOGSTASH. This was missing and caused logstash monitoring not working in Kibana.

--- a/src/main/resources/static_config/static_roles.yml
+++ b/src/main/resources/static_config/static_roles.yml
@@ -182,6 +182,7 @@ SGS_LOGSTASH:
   - "SGS_CLUSTER_MANAGE_ILM"
   - "cluster:admin/ingest/pipeline/put"
   - "cluster:admin/ingest/pipeline/get"
+  - "cluster:admin/xpack/monitoring*"
   index_permissions:
   - index_patterns:
     - "logstash-*"
