Fix index resolution for "*,-index" patterns, introduce searchguard.filter_sgindex_from_all_requests option (ITT-2263, ITT-1929) (#712)
* Introduce searchguard.filter_sgindex_from_all_requests which can be set to true in elasticsearch.yml (default is false) to filter out the searchguard index from _all or * requests referring to all indices.
In a later version we can change the default from "false" to "true".

* Fix index resolution for patterns like "*,-index1" (ITT-2263, ITT-1929)

--- a/src/test/resources/sg_roles.yml
+++ b/src/test/resources/sg_roles.yml
@@ -1011,3 +1011,24 @@ xyz_impsgr:
     - "*"
     allowed_actions:
     - "ALL"
+sg_role_foo_index:
+  cluster_permissions:
+    - '*'
+  index_permissions:
+  - index_patterns:
+    - foo-index
+    allowed_actions:
+    - indices:data/read/*
+    - indices:admin/*
+    - indices:monitor/*
+        
+sg_role_foo_all:
+  cluster_permissions:
+    - '*'
+  index_permissions:
+  - index_patterns:
+    - 'foo-*'
+    allowed_actions:
+    - indices:data/read/*
+    - indices:admin/*
+    - indices:monitor/*
