--- a/src/test/resources/sg_roles_mapping.yml
+++ b/src/test/resources/sg_roles_mapping.yml
@@ -370,3 +370,10 @@ sg_env_test:
 SGS_ALL_ACCESS:
   users:
     - static_role_user
+sg_role_foo_index:
+  users:
+    - foo_index
+    
+sg_role_foo_all:
+  users:
+    - foo_all
