Cleanup and redefine logstash and ILM roles and action groups (ITT-2187)

--- a/sgconfig/sg_action_groups.yml
+++ b/sgconfig/sg_action_groups.yml
@@ -134,3 +134,29 @@ MANAGE_SNAPSHOTS:
   permissions:
     - "cluster:admin/snapshot/*"
     - "cluster:admin/repository/*"
+
+CLUSTER_MANAGE_ILM:
+  readonly: true
+  permissions:
+  - "cluster:admin/ilm/*"
+
+CLUSTER_READ_ILM:
+  readonly: true
+  permissions:
+  - "cluster:admin/ilm/get"
+  - "cluster:admin/ilm/operation_mode/get"
+
+INDICES_MANAGE_ILM:
+  readonly: true
+  permissions:
+  - "indices:admin/ilm/*"
+
+CLUSTER_MANAGE_INDEX_TEMPLATES:
+  readonly: true
+  permissions:
+  - "indices:admin/template/*"
+
+CLUSTER_MANAGE_PIPELINES:
+  readonly: true
+  permissions:
+  - "cluster:admin/ingest/pipeline/*"
