Fix permissions for built-in logstash role to work with ILM (TT-2187)

--- a/src/main/resources/static_config/static_action_groups.yml
+++ b/src/main/resources/static_config/static_action_groups.yml
@@ -232,3 +232,11 @@ SGS_CLUSTER_MANAGE_INDEX_TEMPLATES:
   - "indices:admin/template/*"
   type: "cluster"
   description: "Manage index templates"
+SGS_CLUSTER_MANAGE_PIPELINES:
+  reserved: true
+  hidden: false
+  static: true
+  allowed_actions:
+  - "cluster:admin/ingest/pipeline/*"
+  type: "cluster"
+  description: "Manage pipelines"
