--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </licenses>
 
   <properties>
-    <enterprise-modules.version>7.1.1-36.0.0</enterprise-modules.version>
+    <enterprise-modules.version>7.1.1-36.1.0-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>7.1.1</elasticsearch.version>
     
     <!-- deps -->
